Updated NetisHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -393,13 +393,13 @@
                                         </div>
                                         <p></p>
                                         <div>
-                                            <a href="reports.html">Reports</a>
-                                            <div class="small">Various Reports</div>
+                                            <a href="administrator_reports.html">Reports</a>
+                                            <div class="small">Various reports</div>
                                         </div>
                                         <p></p>
                                         <div>
-                                            <a href="exportimport.html">Export/Import</a>
-                                            <div class="small">Export and import of data</div>
+                                            <a href="administrator_exportimport.html">Data Imports</a>
+                                            <div class="small">Import various data to the system</div>
                                         </div>
 
                                     </div>
