--- a/netishr/administrator_exportimport.html
+++ b/netishr/administrator_exportimport.html
@@ -357,7 +357,7 @@
                 <div class="col-lg-12">
                     <div class="row wrapper border-bottom white-bg page-heading">
                         <div class="col-lg-10">
-                            <h2>Export/Import</h2>
+                            <h2>Data Imports</h2>
                             <ol class="breadcrumb">
                                 <li>
                                     <a href="index.html">Home</a>
@@ -366,7 +366,7 @@
                                     <a href="administrator.html">Administrator</a>
                                 </li>
                                 <li class="active">
-                                    <strong>Export/Import</strong>
+                                    <strong>Data Imports</strong>
                                 </li>
                             </ol>
                         </div>
@@ -383,25 +383,46 @@
                                         <h5 id="general">Job</h5>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="">Job Levels/Job Sub-levels</a>
+                                        <div>Import <a href="http://netika.netishr.com/Upload/Company">Companies</a>
                                         </div>
                                         <p></p>
-                                        <div><a href="">Job Roles/Role Bands</a>
+                                        <div>Import <a href="http://netika.netishr.com/Upload/Branch">Branches</a>
                                         </div>
                                         <p></p>
-                                        <div><a href="">Job Clans/Job Families</a>
+                                        <div>Import <a href="http://netika.netishr.com/Upload/Unit">Units</a>
                                         </div>
                                         <p></p>
-                                        <div><a href="">Job Titles</a>
+
+                                        <div>Import <a href="http://netika.netishr.com/Upload/JobLevel">Job Levels</a> / <a href="http://netika.netishr.com/Upload/JobSubLevel">Sub-levels</a>
                                         </div>
                                         <p></p>
-                                        <div><a href="">Accountability Matrix</a>
+                                        <div>Import <a href="http://netika.netishr.com/Upload/JobRole">Job Roles</a> / <a href="http://netika.netishr.com/Upload/JobRoleBand">Role Bands</a>
                                         </div>
                                         <p></p>
-                                        <div><a href="">Job Description</a>
+                                        <div>Import <a href="http://netika.netishr.com/Upload/JobClan">Job Clans</a> / <a href="http://netika.netishr.com/Upload/JobFamily">Families</a>
                                         </div>
                                         <p></p>
-                                        <div><a href="">Workload Analysis</a>
+                                        <div>Import <a href="http://netika.netishr.com/Upload/JobTitle">Job Titles</a>
+                                        </div>
+                                        <p></p>
+                                        <div>Import <a href="http://netika.netishr.com/Upload/AccountabilityMatrixBP">Accountability Matrix</a>
+                                        </div>
+                                        <p></p>
+                                        <div>Import Job Description
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/JobDescMainFunction">Main Function</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/JobDescAuthority">Authority</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/JobDescResponsibility">Main Responsibility</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/JobDescSpecEducation">Formal Education</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/JobDescSpecExperience">Job Specification - Experience</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/JobDescSpecSkill">Job Specification - Skill</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/JobDescSpecProfile">Job Specification - Profile</a></div>
+                                        </div>
+                                        <p></p>
+                                        <div>Import Accountability Matrix
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/AccountabilityMatrixBP">Business Process</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/AccountabilityMatrixActivity">Activity</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/AccountabilityMatrixActor">Actor</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/AccountabilityMatrixRaci">RACI Matrix</a></div>
                                         </div>
                                         <p></p>
                                     </div>
@@ -413,13 +434,33 @@
                                         <h5 id="general">People</h5>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="">Competency Dictionary</a>
+                                        <div>Import Competency Model
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/CompetencyCategory">Competency Category</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/Competency">Competency</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/CompetencyLevel">Competency Level</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/CompetencyIndicator">Competency Indicator</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/CompetencyMatrix">Competency Matrix</a></div>
                                         </div>
                                         <p></p>
-                                        <div><a href="">Competency Matrix</a>
+                                        <div>Import <a href="http://netika.netishr.com/Upload/Person">Staffs</a>
                                         </div>
                                         <p></p>
 
+                                        <div>Import Staffs' Data
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/PersonLanguage">Language Data</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/PersonEducation">Education</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/PersonArchievement">Archievement</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/PersonOrganization">Organization</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/PersonFamily">Family</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/PersonWorking">Working Experience</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/PersonHistory">Employment History</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/Upload/PersonTraining">Training</a></div>
+                                            <div>&nbsp;&nbsp;&nbsp;<a href="http://netika.netishr.com/PageMenu/UploadPersonPhoto">Profile photos</a></div>
+                                        </div>
+                                        <p></p>
+                                        <div>Import <a href="http://netika.netishr.com/Upload/Applicant">Applicants</a>
+                                        </div>
+                                        <p></p>
                                     </div>
                                 </div>
                             </div>
@@ -429,16 +470,10 @@
                                         <h5 id="general">Payroll</h5>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="">Tax Calculation</a>
+                                        <div>Import <a href="http://netika.netishr.com/Upload/PayrollConfiguration">Pay Items</a>
                                         </div>
                                         <p></p>
-                                        <div><a href="">Overtime Calculation</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Salary Calculation</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Pay Slips</a>
+                                        <div>Import <a href="http://netika.netishr.com/Upload/PayrollAssignment">Pay Assignments</a>
                                         </div>
                                         <p></p>
                                     </div>
@@ -451,16 +486,13 @@
                                         <h5 id="general">Recruitment</h5>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="">Manpower Planning</a>
+                                        <div>Import <a href="http://netika.netishr.com/upload/ManpowerPlanning">Manpower Planning</a>
                                         </div>
                                         <p></p>
-                                        <div><a href="">Recruitment Planning</a>
+                                        <div>Import <a href="http://netika.netishr.com/upload/RecruitmentPlanning">Recruitment Planning</a>
                                         </div>
                                         <p></p>
-                                        <div><a href="">Selection Process</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Job Vacancies</a>
+                                        <div>Import <a href="http://netika.netishr.com/upload/SelectionProcess">Selection Process</a>
                                         </div>
                                         <p></p>
                                     </div>
@@ -468,78 +500,13 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-4">
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5 id="general">Performance</h5>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="">Indicators</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Planning</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Coaching</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Evidence</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Evaluation</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Performance Information</a>
-                                        </div>
-                                        <p></p>
-                                    </div>
-                                </div>
-                            </div>
                             <div class="col-lg-4">
                                 <div class="ibox float-e-margins">
                                     <div class="ibox-title">
                                         <h5 id="general">Personnel</h5>
                                     </div>
                                     <div class="ibox-content">
-                                        <div><a href="">Workflows</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Workf Shifts</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Medical Expense</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Medical Expense Administration</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Business Trips</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Attendance</a>
-                                        </div>
-                                        <p></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5 id="general">Career</h5>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="">Individual Career Plan</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Talent Search</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Talent Pool</a>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="">Talent Development Program</a>
+                                        <div>Import <a href="http://netika.netishr.com/Upload/Attendance">Attendance</a>
                                         </div>
                                         <p></p>
                                     </div>
