Updated NetisHR files

--- a/netishr/administrator_reports.html
+++ b/netishr/administrator_reports.html
@@ -431,6 +431,16 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <div class="col-lg-4">
+                                <div class="ibox float-e-margins">
+                                    <div class="ibox-title">
+                                        <h5 id="general">General</h5>
+                                    </div>
+                                    <div class="ibox-content">
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="footer">
