--- a/netishr/report_attendance_work.html
+++ b/netishr/report_attendance_work.html
@@ -398,7 +398,7 @@
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-sm-12">
+                                            <div class="col-sm-6">
                                                 <div class="form-group">
                                                     <label class="control-label">Job title: </label>
                                                     <div class="input-group">
@@ -470,6 +470,22 @@
                                                     </div>
                                                 </div>
                                             </div>
+
+
+                                            <div class="col-sm-6">
+
+                                                <div class="form-group" id="monthpicker">
+                                                    <label>Select dates</label>:
+                                                    <div class="form-group" id="data_5">
+                                                        <div class="input-daterange input-group" id="datepicker">
+                                                            <input type="text" class="input-sm form-control" name="start" value="01/01/2017" />
+                                                            <span class="input-group-addon">to</span>
+                                                            <input type="text" class="input-sm form-control" name="end" value="02/28/2017" />
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
                                         </div>
 
                                         <div class="row">
@@ -500,10 +516,11 @@
                                                 <thead>
                                                     <tr>
                                                         <th width="20%" data-toggle="true">Name</th>
-                                                        <th width="20%" data-hide="all">Worked days/hours</th>
-                                                        <th width="20%" data-hide="all">Overtime</th>
-                                                        <th width="20%" data-hide="all">Leaves</th>
-
+                                                        <th width="20%" data-hide="all">Worked Time</th>
+                                                        <th width="20%" data-hide="all">Overtime
+                                                            <br><small>(hours/minutes)</small></th>
+                                                        <th width="20%" data-hide="all">Absence
+                                                            <br><small>(days)</small></th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
@@ -511,15 +528,22 @@
                                                         <td><a href="persons_applicants_profile.html">Arnold Norman Sapakoly<br>
                                                 <small>Finance & Administration Staff</small></a></td>
                                                         <td>18 days (140 hours)</td>
-                                                        <td>5 hours</td>
-                                                        <td>1 day</td>
+                                                        <td>5:00</td>
+                                                        <td>1</td>
                                                     </tr>
                                                     <tr>
                                                         <td><a href="persons_applicants_profile.html">Afwan Syawal<br>
                                                 <small>Software Engineer</small></a></td>
                                                         <td>22 days (171 hours)</td>
-                                                        <td>25 hours</td>
-                                                        <td>0 day</td>
+                                                        <td>25:30</td>
+                                                        <td>0</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><a href="persons_applicants_profile.html">Nono Sarjono<br>
+                                                <small>Software Engineer</small></a></td>
+                                                        <td>23 days (184 hours)</td>
+                                                        <td>28:30</td>
+                                                        <td>2</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
