Updated NetisHR files

--- a/netishr/report_training_history.html
+++ b/netishr/report_training_history.html
@@ -437,7 +437,7 @@
                                             <table class="table table-hover table-stripped toggle-arrow-tiny">
                                                 <thead>
                                                     <tr>
-                                                        <th width="20%" data-toggle="true">Name</th>
+                                                        <th width="20%" data-toggle="true">Name/Date</th>
                                                         <th width="20%" data-hide="all">Capacity</th>
                                                         <th width="20%" data-hide="all">Participants</th>
                                                         <th width="20%" data-hide="all">Success Rate</th>
@@ -446,7 +446,8 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td><a href="">ACCB - Accounting for Beginners</a></td>
+                                                        <td><a href="">ACCB - Accounting for Beginners</a>
+                                                            <br><small>April 1-April 2, 2017</small></td>
                                                         <td>25</td>
                                                         <td>30 applied
                                                             <br>25 enrolled
@@ -454,7 +455,8 @@
                                                         <td>84%</td>
                                                     </tr>
                                                     <tr>
-                                                        <td><a href="">PHY - Advanced Phyton Programming</a></td>
+                                                        <td><a href="">PHY - Advanced Phyton Programming</a>
+                                                            <br><small>June 10-June 12, 2017</small></td>
                                                         <td>15</td>
                                                         <td>12 applied
                                                             <br>11 enrolled
