Updated NetisHR files

--- a/netishr/payroll_overtime_calculation_details.html
+++ b/netishr/payroll_overtime_calculation_details.html
@@ -26,7 +26,7 @@
 
     <div id="wrapper">
 
-                                                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -394,10 +394,12 @@
                             </div>
                         </div>
 
-
                         <div class="row">
                             <div class="panel-body">
                                 <div class="col-sm-12">
+
+                                    <div>
+                                        <label>Total worked hours:</label>&nbsp;32 hours (minimum 40 hours are necessary)</div>
 
                                     <div class="hr-line-dashed"></div>
 
@@ -546,7 +548,8 @@
                                                         <td colspan="3"></td>
                                                         <td>Total</td>
                                                         <td>9:20</td>
-                                                        <td>798,366</td>
+                                                        <td>0
+                                                        </td>
                                                     </tr>
                                                 </tfoot>
                                             </table>
