--- a/netishr/site_management.html
+++ b/netishr/site_management.html
@@ -414,6 +414,10 @@
                                         <div><a href="#">Role Menu Assignment</a>
                                             <div class="small">Role Menu Assignment</div>
                                         </div>
+                                        <p></p>
+                                        <div><a href="subscriptionbilling.html">Subcriptions and Billing</a>
+                                            <div class="small">Manage subcriptions and billing</div>
+                                        </div>
                                     </div>
 
                                 </div>
