Billing/subscription update

--- a/netishr/subscriptionbilling-new.html
+++ b/netishr/subscriptionbilling-new.html
@@ -717,8 +717,7 @@
                                         <div class="ibox">
                                             <div class="ibox-content">
 
-                                                
-                                        <a href="subscriptionbilling-products.html" class="btn btn-primary btn-xs">Add subscription</a>
+                                                <button type="button" class="btn btn-primary btn-xs"><a href="subscriptionbilling-products.html">Add subscription</a></button>
                                                 
                                  <table class="footable table table-stripped toggle-arrow-tiny">
                                     <thead>
