--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ through an integrated HR business solutions.</p>
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">We've got what you need!</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+          <p class="text-white-50 mb-4">Our consulting services are growing, we might have what you need to help grow your business!</p>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Check Out!</a>
         </div>
       </div>
     </div>
