--- a/index.html
+++ b/index.html
@@ -59,15 +59,14 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">It's All About People</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">It's All About Your Business</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5"> Our focus is "People Performance".
+          <p class="text-white-75 font-weight-light mb-5"> Our focus is your business.
 
-PT Netika Indonesia aims to bring breakthrough HR services and products which will redefine HR industry and meet
-practitioners’ needs. We are in the business of making highest impact to people and business performance
-through an integrated HR business solutions.</p>
+PT Netika Indonesia is in the business of making highest impact to people and business performance
+through an integrated HR and IT business solutions.</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Find Out More</a>
         </div>
       </div>
@@ -258,13 +257,13 @@ Integrated Human Capital Management System</h3>
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">About Us</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">PT Netika Indonesia is an international joint venture of Indonesia and Japanese management professionals, which brings breakthrough HR products which will redefine HR industry and meet practitioners’ needs. We are in the business of making highest impact to people and business performance through an integrated HR business solutions. Netika is based on years of committed and proven service to our numerous customers.</p>
+          <p class="text-white-50 mb-4">PT Netika Indonesia is an international joint venture of Indonesia and Japanese management professionals. We are in the business of making highest impact to people and business performance through an integrated HR and IT business solutions. Netika is based on years of committed and proven service to our numerous customers.</p>
             
             <p class="text-white-50 mb-4">
                 <strong><span class="navy">PT Netika Indonesia</span></strong><br/>
             Sovereign Plaza, 22nd Floor<br>
                 Jl. TB Simatupang Kav 36, Jakarta 12430, Indonesia<br>
-                Phone: +62 21 294 00179
+                Phone: +62-21-294-00179
                 </p>
         </div>
       </div>
