--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@ Integrated Human Capital Management System</h3>
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center">
-          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div> +62-21-294-00179</div>
+            <a href="tel:+62-21-294-00179"><i class="fas fa-phone fa-3x mb-3 text-muted"></i></a>
+          <div><a href="tel:+62-21-294-00179">+62-21-294-00179</a></div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
