--- a/index.html
+++ b/index.html
@@ -81,21 +81,21 @@ through an integrated HR and IT business solutions.</p>
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+            <i class="fas fa-4x fa-mail-bulk text-primary mb-4"></i>
             <h3 class="h4 mb-2">HR Consulting</h3>
             <p class="text-muted mb-0">We aim to strengthen human capital practices in our clients by empowering people leaders. Our HR consultants provide implementable end-to-end solutions for this.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+            <i class="fas fa-4x fa-chalkboard-teacher text-primary mb-4"></i>
             <h3 class="h4 mb-2">Trainings and Workshops</h3>
             <p class="text-muted mb-0">We believe the wisest investment is on PEOPLE. When companies grow PEOPLE, they grow for long term success. Our trainings and workshops are designed to improve competency for better performance.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
+            <i class="fas fa-4x fa-users text-primary mb-4"></i>
             <h3 class="h4 mb-2">
 Integrated Human Capital Management System</h3>
             <p class="text-muted mb-0">Our HRIS system, Netis, is an integrated human capital management system developed by HR experts based on HR best practice.</p>
@@ -103,7 +103,7 @@ Integrated Human Capital Management System</h3>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
+            <i class="fas fa-4x fa-server text-primary mb-4"></i>
             <h3 class="h4 mb-2">IT system solutions</h3>
             <p class="text-muted mb-0">IT is a powerful tool for increasing your business performance. With our extensive knowledge and experience in building IT-based business systems, we believe we can support your business through IT system.</p>
           </div>
