--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ Integrated Human Capital Management System</h3>
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">About Us</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">PT Netika Indonesia is an international joint venture of Indonesia and Japanese management professionals. We are in the business of making highest impact to people and business performance through an integrated HR and IT business solutions. Netika is based on years of committed and proven service to our numerous customers.</p>
+          <p class="text-white-50 mb-4">PT Netika Indonesia is an international joint venture of Indonesia and Japanese management professionals. We are in the business of making highest impact to people and business performance through an integrated HR and IT business solutions. PT Netika Indonesia is based on years of committed and proven service to our numerous customers.</p>
             
             <p class="text-white-50 mb-4">
                 <strong><span class="navy">PT Netika Indonesia</span></strong><br/>
