--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@ Integrated Human Capital Management System</h3>
             
             <p class="text-white-50 mb-4">
                 <strong><span class="navy">PT Netika Indonesia</span></strong><br/>
-            Sovereign Plaza, 22nd Floor<br>
-                Jl. TB Simatupang Kav 36, Jakarta 12430, Indonesia<br>
+            CEO Building , Level 12<br>
+                Jl. TB Simatupang No.18C, Jakarta 12430, Indonesia<br>
                 Phone: +62-21-294-00179
                 </p>
         </div>
@@ -275,7 +275,7 @@ Integrated Human Capital Management System</h3>
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - PT Netika Indonesia</div>
+      <div class="small text-center text-muted">Copyright &copy; 2024 - PT Netika Indonesia</div>
     </div>
   </footer>
 
