--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@ Integrated Human Capital Management System</h3>
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center">
-            <a href="tel:+62-21-294-00179"><i class="fas fa-phone fa-3x mb-3 text-muted"></i></a>
-          <div><a href="tel:+62-21-294-00179">+62-21-294-00179</a></div>
+            <a href="tel:+622139701799"><i class="fas fa-phone fa-3x mb-3 text-muted"></i></a>
+          <div><a href="tel:+622139701799">+62-21-3970-1799</a></div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
@@ -263,7 +263,7 @@ Integrated Human Capital Management System</h3>
                 <strong><span class="navy">PT Netika Indonesia</span></strong><br/>
             CEO Building , Level 12<br>
                 Jl. TB Simatupang No.18C, Jakarta 12430, Indonesia<br>
-                Phone: +62-21-294-00179
+                Phone: +62-21-3970-1799
                 </p>
         </div>
       </div>
