--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Integrated Human Capital Management System</h3>
                 <strong><span class="navy">PT Netika Indonesia</span></strong><br/>
             CEO Building , Level 12<br>
                 Jl. TB Simatupang No.18C, Jakarta 12430, Indonesia<br>
-                Phone: +62-21-3970-1799
+                Phone: +62-21-3970-1799 / <a href="https://wa.me/+628111741887">+62-811-1741887</a>
                 </p>
         </div>
       </div>
