--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@ Integrated Human Capital Management System</h3>
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center">
-            <a href="tel:+622139701799"><i class="fas fa-phone fa-3x mb-3 text-muted"></i></a>
-          <div><a href="tel:+622139701799">+62-21-3970-1799</a></div>
+            <a href="https://wa.me/+628111741887"><i class="fas fa-phone fa-3x mb-3 text-muted"></i></a>
+          <div><a href="https://wa.me/+628111741887">+62-811-1741887</a></div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
