--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
   <title>PT Netika Indonesia</title>
 
+  <style>
+  a:visited {
+  color: white;
+  }
+  </style>
+
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 
