--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <title>PT Netika Indonesia</title>
 
   <style>
-  a:link, a:visited {
-  color: white;
-  }
+a:link, a:visited {
+  text-decoration: underline;
+  color: lightgrey;
+}
   </style>
 
   <!-- Font Awesome Icons -->
