--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ Integrated Human Capital Management System</h3>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:contact@yourwebsite.com">inq (at) netikaindonesia.com</a>
+          <a class="d-block">inq (at) netikaindonesia.com</a>
         </div>
       </div>
               <div class="row justify-content-center">
