--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ Integrated Human Capital Management System</h3>
                 <strong><span class="navy">PT Netika Indonesia</span></strong><br/>
             CEO Building , Level 12<br>
                 Jl. TB Simatupang No.18C, Jakarta 12430, Indonesia<br>
-                Whatsapp: <a href="https://api.whatsapp.com/send/?phone=628111741887&text=Berikut+ini+pesan+dari+situs+web+Netika:++">+62-811-1741887</a>
+                Whatsapp: <a href="https://api.whatsapp.com/send/?phone=628111741887&text=Berikut+ini+pesan+dari+situs+web+Netika:%20+" target="_blank">+62-811-1741887</a>
                 </p>
         </div>
       </div>
